--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# docs
+docs/docs/.vitepress/cache
+docs/docs/.vitepress/dist
+
 # dependencies
 /node_modules
 /.pnp
